@@ -1,3 +1,6 @@
+2018-04-11 Magnus Hagdorn
+ * piccolo2/player/PlayerApp.py: set current run directly
+
 2018-04-10 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: allow auto integration, repeat measurements
    and delay settings directly; disable parameter settings when server is 
